Purify the expression.
As frontend developers hate the expression "A.I. chatbot can replace the GUI application" too much a lot, made its expression a little bit purifier.

--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -23,7 +23,7 @@ As you can see, in the Shopping A.I. chatbot application, the user can do everyt
 
 Just by delivering the Swagger document, Super A.I. chatbot performing the LLM (Large Language Model) function calling is automatically composed. The Super A.I. chatbot will select proper functions defined in the Swagger document by analyzing conversation contexts with the user. And then Super A.I. chatbot requests the user to write arguments for the selected functions by conversation texts, and actually calls the API function with the argument. This is the key concept of the Nestia A.I. chatbot.
 
-In other words, every backend servers providing Swagger documents can be conversed to the A.I. chatbot. In the new A.I. era, you don't need to develop GUI (Graphical User Interface) application more. Just prepare swagger document, and let the A.I. chatbot to do the rest. The A.I. chatbot can replace the GUI application development, and it can be more efficient and user-friendly than the traditional GUI applications.
+In other words, every backend servers providing Swagger documents can be conversed to the A.I. chatbot. In the new A.I. era, no more need to dedicate GUI (Graphical User Interface) application development like before. Prepare Swagger document, and let the A.I. chatbot to do the rest. Even though the A.I. chatbot can't conquer every frontend developments, it can replace many things, and more efficient and user-friendly than the traditional GUI applications.
 
 
 
