Add gurubase chatbot

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -36,6 +36,11 @@ import Stack from '@mui/material/Stack';
     "https://nestia.io/docs/",
   ],
   [
+    "Gurubase",
+    "https://img.shields.io/badge/Gurubase-Ask%20Nestia%20Guru-006BFF",
+    "https://gurubase.io/g/nestia",
+  ],
+  [
     "Discord",
     "https://img.shields.io/badge/discord-samchon-d91965?style=flat&labelColor=5866f2&logo=discord&logoColor=white&link=https://discord.gg/E94XhzrUCZ",
     "https://discord.gg/E94XhzrUCZ",
