Change title of chat.mdx

--- a/website/pages/docs/swagger/chat.mdx
+++ b/website/pages/docs/swagger/chat.mdx
@@ -1,5 +1,5 @@
 ---
-title: Guide Documents > Swagger Document > A.I. Chatbot 
+title: Guide Documents > Swagger Document > AI Chatbot Development 
 ---
 import { Callout, Tabs } from 'nextra/components'
 
