--- a/website/pages/docs/core/TypedParam.mdx
+++ b/website/pages/docs/core/TypedParam.mdx
@@ -14,7 +14,7 @@ Type safe path parameter decorator.
 
 It's almost same with original `@Param()` function of `NestJS`, however, `@TypedParam()` is more type safe. 
 
-As `@TypedParam()` can anlayze source code in the compilation level, it can specify parameter type by itself. Also, while `NestJS` cannot distinguish `nullable` type and consider every parameter value as a `string` type, `@TypedParam()` can do it. Furthermore, `@TypedParam()` can validate special types like `"uuid"` or `"date"`.
+As `@TypedParam()` can analyze source code in the compilation level, it can specify parameter type by itself. Also, while `NestJS` cannot distinguish `nullable` type and consider every parameter value as a `string` type, `@TypedParam()` can do it. Furthermore, `@TypedParam()` can validate special types like `"uuid"` or `"date"`.
 
 Let's read below example code, and see how `@TypedParam()` works.
 
