--- a/website/pages/docs/e2e/why.mdx
+++ b/website/pages/docs/e2e/why.mdx
@@ -407,7 +407,7 @@ export async function test_api_bbs_article_index_search(
   </Tabs.Tab>
 </Tabs>
 
-Just make test functions utillizing SDK library, and export those functions with `test_` prefixed names. And then if compose the main program of the test, all of the test functions would be automatically mounted and executed whenever you run the main test program.
+Just make test functions utilizing SDK library, and export those functions with `test_` prefixed names. And then if compose the main program of the test, all of the test functions would be automatically mounted and executed whenever you run the main test program.
 
 If you want to experience the test program earlier, visit below playground website.
 
