--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -598,7 +598,7 @@ You can enhance validation logic, of `@TypedBody()`, through special tags.
 
 You know what? `@TypedBody()` utilizes [`typia.validate<T>()`](https://typia.io/docs/validators/validate) function for request body data validation, and the [`typia.validate<T>()`](https://typia.io/docs/validators/validate) function supports additional type checking logics through type and comment tags. For reference, "Type Tag" means a intersection type with atomic type and special tag type of `typia` like `number & tags.Type<"uint32">`, and "Comment Tag" means a comment starting from `@` symbol following `@${name} ${value}` format.
 
-With those type and comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Docments of [typia](https://typia.io), and see the example code. You may understand how to utilize such type and comment tags, in a few minutes.
+With those type and comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Documents of [typia](https://typia.io), and see the example code. You may understand how to utilize such type and comment tags, in a few minutes.
 
   - [**`typia` > Validators > Custom Tags**](https://typia.io/docs/validators/tags/)
     - [Outline](https://typia.io/docs/validators/tags/#outline)
