--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -436,7 +436,7 @@ You know what? `@TypedRoute.${method}()` functions are using [`typia.assertStrin
 
 Also, as [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function can utililze comment tags for additional validation, `TypedRoute` also can utillze them, too. For reference, "Type Tag" means a intersection type with atomic type and special tag type of `typia` like `number & tags.Type<"uint32">`, and "Comment Tag" means a comment starting from `@` symbol following `@${name} ${value}` format.
 
-With those type and comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Docments of [typia](https://typia.io), and see the example code. You may understand how to utilize such type and comment tags, in a few minutes.
+With those type and comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Documents of [typia](https://typia.io), and see the example code. You may understand how to utilize such type and comment tags, in a few minutes.
 
   - [**`typia` > Validators > Custom Tags**](https://typia.io/docs/validators/tags/)
     - [Outline](https://typia.io/docs/validators/tags/#outline)
